Content_books & Shares_social_media

--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,12 @@
         <link rel="mask-icon" href="../src/favicon_for_my_project/safari-pinned-tab.svg" color="#5bbad5">
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
-        
+
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
         <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
     <body>
+        <script src="https://apps.elfsight.com/p/platform.js" defer></script>
         <div id="root"></div>
         <!--<script src="dist/main.js"></script> plugin smart enough for this--> 
     </body>
