Localization_website_test_version & Video_player__appears|dis_sticker

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,11 @@
         <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
     <body>
-        <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+        <script src="https://apps.elfsight.com/p/platform.js" defer></script>  
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.selectbox/1.2.0/jquery.selectBox.js"></script>
         <div id="root"></div>
         <!--<script src="dist/main.js"></script> plugin smart enough for this--> 
     </body>
+    
 </html>
